--- a/project1.html
+++ b/project1.html
@@ -14,6 +14,9 @@
             padding:20px;
             background-color: cadetblue;
         }
+      body{
+          background-color: beige;
+        }
     </style>
     <script>
         let a;
